<?xml version="1.0" encoding="utf-8"?>
<remote-actions
    actionset_label="@string/app_name"
    version="1.2">
    <action
        id="next_page"
        label="@string/next_page"
        priority="1"
        repeatable="true"
        repeatable_interval="short"
        trigger_key="PAGE_DOWN">
        <preference name="gesture" value="click" />
    </action>

    <action
        id="prev_page"
        label="@string/prev_page"
        priority="2"
        repeatable="true"
        repeatable_interval="short"
        trigger_key="PAGE_UP">
        <preference name="gesture" value="double_click" />
    </action>

    <action
        id="prev_chapter"
        label="@string/previous_chapter"
        priority="3"
        repeatable="false"
        trigger_key="MEDIA_PREVIOUS">
        <preference name="gesture" value="move_left" />
    </action>

    <action
        id="next_chapter"
        label="@string/next_chapter"
        priority="4"
        repeatable="false"
        trigger_key="MEDIA_NEXT">
        <preference name="gesture" value="move_right" />
    </action>
</remote-actions>