<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingHorizontal="16dp">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:minHeight="0dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/bottom_sheet_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/text_font"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/text_typeface"
        android:textSize="14sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButtonGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_textShadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3Expressive.Button.IconButton.Tonal"
            app:icon="@drawable/ic_shadow"
            android:checkable="true"
            android:focusable="true"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sw_underline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3Expressive.Button.IconButton.Tonal"
            app:icon="@drawable/ic_underline"
            android:checkable="true"
            android:focusable="true"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_textItalic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3Expressive.Button.IconButton.Tonal"
            app:icon="@drawable/ic_format_italic"
            android:checkable="true"
            android:focusable="true"/>

    </com.google.android.material.button.MaterialButtonGroup>

    <com.google.android.material.button.MaterialButtonGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:gravity="center_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/textFontWeightConverter"
            style="@style/Widget.Material3Expressive.Button.IconButton.Tonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_text_weight_2"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShadowSet"
            style="@style/Widget.Material3Expressive.Button.IconButton.Tonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_fill_colors" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegexColor"
            style="@style/Widget.Material3Expressive.Button.IconButton.Tonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_palette" />

    </com.google.android.material.button.MaterialButtonGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:text="@string/read_color"
        android:textSize="14sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButtonGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        android:gravity="center">

        <io.legado.app.ui.widget.AccentColorButton
            android:id="@+id/btn_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3Expressive.Button.OutlinedButton"
            android:text="@string/text_color" />

        <io.legado.app.ui.widget.AccentColorButton
            android:id="@+id/btn_text_accent_color"
            style="@style/Widget.Material3Expressive.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_accent_color" />

        <io.legado.app.ui.widget.AccentColorButton
            android:id="@+id/btnShadowColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3Expressive.Button.OutlinedButton"
            android:text="@string/text_shadow_color" />

    </com.google.android.material.button.MaterialButtonGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/paragraph_typeface"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom">

            <io.legado.app.ui.widget.SimpleSliderView
                android:id="@+id/btn_indent_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="32dp"
                app:title="@string/text_indent"
                app:max="4" />

            <io.legado.app.ui.widget.SimpleSliderView
                android:id="@+id/sliderFontWeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:title="@string/font_weight_text"
                app:min="100"
                app:max="900" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <io.legado.app.ui.widget.SimpleSliderView
                android:id="@+id/dsb_paragraph_spacing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                app:max="20"
                app:isBottomBackground="true"
                app:title="@string/paragraph_size" />

            <io.legado.app.ui.widget.SimpleSliderView
                android:id="@+id/dsb_line_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:isBottomBackground="true"
                app:max="20"
                app:title="@string/line_size" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <io.legado.app.ui.widget.SimpleSliderView
                android:id="@+id/dsb_text_letter_spacing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:isBottomBackground="true"
                app:max="100"
                app:title="@string/text_letter_spacing" />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButtonGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingHorizontal="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_select_fonts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.Material3Expressive.Button.OutlinedButton"
            android:text="@string/select_font"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_default_fonts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.Material3Expressive.Button.OutlinedButton"
            android:text="@string/default_font"/>

    </com.google.android.material.button.MaterialButtonGroup>

</LinearLayout>